# slashmail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
patches/imap/: .cargo_vcs_info.json  Cargo.toml
patches/imap-proto/src/: lib.rs
patches/imap-proto/src/parser/: rfc3501.rs
skills/slashmail/: SKILL.md
src/: config.rs  connection.rs  delete.rs  display.rs  export.rs  lib.rs  main.rs  read.rs  search.rs
tests/: integration.rs
